// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | FlexTable / Default FlexTable Default Table 1`] = `
.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c3 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c3 > *:not(:first-child) {
  padding-top: 0;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c10 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c13 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c8 {
  display: inline-block;
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c9 {
  width: inherit;
}

.c12 {
  overflow: hidden;
}

.c4 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c4 > *:first-child {
  padding-left: 0;
}

.c4 > *:last-child {
  padding-right: 0;
}

.c11 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c11:hover {
  background: #F5F5F5;
}

.c11 > *:first-child {
  padding-left: 0;
}

.c11 > *:last-child {
  padding-right: 0;
}

.c5 {
  z-index: 1;
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
  border-bottom: 1px solid #282823;
}

.c7 {
  overflow: hidden;
}

.c2 {
  position: relative;
}

.c0 {
  background-color: #F5F5F5;
}

.c0:not(:last-of-type) {
  margin-bottom: 40px;
}

@media (min-width:760px) {
  .c1 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0"
>
  <span
    className="c1"
  >
    Default Table
  </span>
  <div
    className="c2"
    role="table"
  >
    <div
      className="c3 c4 c5"
      role="row"
    >
      <div
        className="c6 c7"
        role="columnheader"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c10"
          >
            Header 1
          </span>
        </div>
      </div>
      <div
        className="c6 c7"
        role="columnheader"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c10"
          >
            Header 2
          </span>
        </div>
      </div>
      <div
        className="c6 c7"
        role="columnheader"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c10"
          >
            Header 3
          </span>
        </div>
      </div>
    </div>
    <div
      className="c3 c11"
      role="row"
    >
      <div
        className="c6 c12"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c13"
          >
            Cell 1-1
          </span>
        </div>
      </div>
      <div
        className="c6 c12"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c13"
          >
            Cell 1-2
          </span>
        </div>
      </div>
      <div
        className="c6 c12"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c13"
          >
            Cell 1-3
          </span>
        </div>
      </div>
    </div>
    <div
      className="c3 c11"
      role="row"
    >
      <div
        className="c6 c12"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c13"
          >
            Cell 2-1
          </span>
        </div>
      </div>
      <div
        className="c6 c12"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c13"
          >
            Cell 2-2
          </span>
        </div>
      </div>
      <div
        className="c6 c12"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c13"
          >
            Cell 2-3
          </span>
        </div>
      </div>
    </div>
    <div
      className="c3 c11"
      role="row"
    >
      <div
        className="c6 c12"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c13"
          >
            Cell 3-1
          </span>
        </div>
      </div>
      <div
        className="c6 c12"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c13"
          >
            Cell 3-2
          </span>
        </div>
      </div>
      <div
        className="c6 c12"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c13"
          >
            Cell 3-3
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | FlexTable / Default FlexTable Default Table With Actions Column 1`] = `
.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c3 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c3 > *:not(:first-child) {
  padding-top: 0;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c11 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex: 0 20px;
  -ms-flex: 0 20px;
  flex: 0 20px;
}

.c17 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c10 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c14 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c16 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c8 {
  display: inline-block;
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c15 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #282823;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c15,
.c15[type='button'],
.c15[type='reset'],
.c15[type='submit'] {
  -webkit-appearance: button;
}

.c15::-moz-focus-inner,
.c15[type='button']::-moz-focus-inner,
.c15[type='reset']::-moz-focus-inner,
.c15[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c15:-moz-focusring,
.c15[type='button']:-moz-focusring,
.c15[type='reset']:-moz-focusring,
.c15[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c9 {
  width: inherit;
}

.c13 {
  overflow: hidden;
}

.c4 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c4 > *:first-child {
  padding-left: 0;
}

.c4 > *:last-child {
  padding-right: 0;
}

.c12 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c12:hover {
  background: #F5F5F5;
}

.c12 > *:first-child {
  padding-left: 0;
}

.c12 > *:last-child {
  padding-right: 0;
}

.c5 {
  z-index: 1;
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
  border-bottom: 1px solid #282823;
}

.c7 {
  overflow: hidden;
}

.c2 {
  position: relative;
}

.c0 {
  background-color: #F5F5F5;
}

.c0:not(:last-of-type) {
  margin-bottom: 40px;
}

@media (min-width:760px) {
  .c1 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0"
>
  <span
    className="c1"
  >
    Default Table With Actions Column
  </span>
  <div
    className="c2"
    role="table"
  >
    <div
      className="c3 c4 c5"
      role="row"
    >
      <div
        className="c6 c7"
        role="columnheader"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c10"
          >
            Header 1
          </span>
        </div>
      </div>
      <div
        className="c6 c7"
        role="columnheader"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c10"
          >
            Header 2
          </span>
        </div>
      </div>
      <div
        className="c6 c7"
        role="columnheader"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c10"
          >
            Header 3
          </span>
        </div>
      </div>
      <div
        className="c11 c7"
        role="columnheader"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c10"
          />
        </div>
      </div>
    </div>
    <div
      className="c3 c12"
      role="row"
    >
      <div
        className="c6 c13"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c14"
          >
            Cell 1-1
          </span>
        </div>
      </div>
      <div
        className="c6 c13"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c14"
          >
            Cell 1-2
          </span>
        </div>
      </div>
      <div
        className="c6 c13"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c14"
          >
            Cell 1-3
          </span>
        </div>
      </div>
      <div
        className="c11 c13"
        role="cell"
      >
        <button
          className="NormalizedButton__Button-ey7f5x-0 c15"
          onClick={[Function]}
          type="button"
        >
          <span
            className="c16"
          >
            <svg
              aria-hidden="true"
              className="c17"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M21 9a3 3 0 1 1 0 6 3 3 0 0 1 0-6zM3 9a3 3 0 1 1 0 6 3 3 0 0 1 0-6zm9 0a3 3 0 1 1 0 6 3 3 0 0 1 0-6z"
                fillRule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      className="c3 c12"
      role="row"
    >
      <div
        className="c6 c13"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c14"
          >
            Cell 2-1
          </span>
        </div>
      </div>
      <div
        className="c6 c13"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c14"
          >
            Cell 2-2
          </span>
        </div>
      </div>
      <div
        className="c6 c13"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c14"
          >
            Cell 2-3
          </span>
        </div>
      </div>
      <div
        className="c11 c13"
        role="cell"
      >
        <button
          className="NormalizedButton__Button-ey7f5x-0 c15"
          onClick={[Function]}
          type="button"
        >
          <span
            className="c16"
          >
            <svg
              aria-hidden="true"
              className="c17"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M21 9a3 3 0 1 1 0 6 3 3 0 0 1 0-6zM3 9a3 3 0 1 1 0 6 3 3 0 0 1 0-6zm9 0a3 3 0 1 1 0 6 3 3 0 0 1 0-6z"
                fillRule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      className="c3 c12"
      role="row"
    >
      <div
        className="c6 c13"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c14"
          >
            Cell 3-1
          </span>
        </div>
      </div>
      <div
        className="c6 c13"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c14"
          >
            Cell 3-2
          </span>
        </div>
      </div>
      <div
        className="c6 c13"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c14"
          >
            Cell 3-3
          </span>
        </div>
      </div>
      <div
        className="c11 c13"
        role="cell"
      >
        <button
          className="NormalizedButton__Button-ey7f5x-0 c15"
          onClick={[Function]}
          type="button"
        >
          <span
            className="c16"
          >
            <svg
              aria-hidden="true"
              className="c17"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M21 9a3 3 0 1 1 0 6 3 3 0 0 1 0-6zM3 9a3 3 0 1 1 0 6 3 3 0 0 1 0-6zm9 0a3 3 0 1 1 0 6 3 3 0 0 1 0-6z"
                fillRule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | FlexTable / Default FlexTable Default Table With Custom Title 1`] = `
.c6 {
  height: 12px;
  box-sizing: border-box;
  display: block;
  width: 16px;
  overflow: hidden;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  margin-left: -2px;
  margin-right: -2px;
}

.c4 > * {
  padding-left: 2px;
  padding-right: 2px;
}

.c4 > *:not(:first-child) {
  padding-top: 0;
}

.c5 {
  box-sizing: border-box;
}

.c9 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c9 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c9 > *:not(:first-child) {
  padding-top: 0;
}

.c12 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c7 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c18 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c14 {
  display: inline-block;
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c15 {
  width: inherit;
}

.c17 {
  overflow: hidden;
}

.c10 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c10 > *:first-child {
  padding-left: 0;
}

.c10 > *:last-child {
  padding-right: 0;
}

.c16 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c16:hover {
  background: #F5F5F5;
}

.c16 > *:first-child {
  padding-left: 0;
}

.c16 > *:last-child {
  padding-right: 0;
}

.c11 {
  z-index: 1;
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
  border-bottom: 1px solid #282823;
}

.c13 {
  overflow: hidden;
}

.c2 {
  position: relative;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 {
  background-color: #F5F5F5;
}

.c0:not(:last-of-type) {
  margin-bottom: 40px;
}

@media (min-width:760px) {
  .c1 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0"
>
  <span
    className="c1"
  >
    Default Table Custom With Title
  </span>
  <div
    aria-labelledby="custom-title-title"
    className="c2"
    id="custom-title"
    role="table"
  >
    <div
      className="c3"
      id="custom-title-title"
    >
      <div
        className="c4"
      >
        <div
          className="c5"
        >
          <svg
            className="c6"
            focusable="false"
            role="img"
            viewBox="0 0 640 480"
          >
            <g
              transform="translate(50.082) scale(.9375)"
            >
              <g
                fillRule="evenodd"
                strokeWidth="1pt"
              >
                <path
                  d="M-121.103.302h256V205.1h-256zM-121.103 307.178h256v204.8h-256z"
                  fill="#006aa7"
                />
                <path
                  d="M-121.103 204.984h256v102.4h-256z"
                  fill="#fecc00"
                />
                <path
                  d="M133.843.01h102.4v511.997h-102.4z"
                  fill="#fecc00"
                />
                <path
                  d="M232.995 205.013h460.798v102.4H232.995z"
                  fill="#fecc00"
                />
                <path
                  d="M236.155 307.208h460.797v204.799H236.155zM236.155.302h460.797V205.1H236.155z"
                  fill="#006aa7"
                />
              </g>
            </g>
            <title>
              Sweden
            </title>
          </svg>
        </div>
        <div
          className="c5"
        >
          <span
            className="c7"
          >
            Ericsson Corporation
          </span>
        </div>
        <div
          className="c5"
        >
          <span
            className="c8"
          >
            (
            ERICSSON
            )
          </span>
        </div>
      </div>
    </div>
    <div
      className="c9 c10 c11"
      role="row"
    >
      <div
        className="c12 c13"
        role="columnheader"
      >
        <div
          className="c14 c15"
        >
          <span
            className="c8"
          >
            Header 1
          </span>
        </div>
      </div>
      <div
        className="c12 c13"
        role="columnheader"
      >
        <div
          className="c14 c15"
        >
          <span
            className="c8"
          >
            Header 2
          </span>
        </div>
      </div>
      <div
        className="c12 c13"
        role="columnheader"
      >
        <div
          className="c14 c15"
        >
          <span
            className="c8"
          >
            Header 3
          </span>
        </div>
      </div>
    </div>
    <div
      className="c9 c16"
      role="row"
    >
      <div
        className="c12 c17"
        role="cell"
      >
        <div
          className="c14 c15"
        >
          <span
            className="c18"
          >
            Cell 1-1
          </span>
        </div>
      </div>
      <div
        className="c12 c17"
        role="cell"
      >
        <div
          className="c14 c15"
        >
          <span
            className="c18"
          >
            Cell 1-2
          </span>
        </div>
      </div>
      <div
        className="c12 c17"
        role="cell"
      >
        <div
          className="c14 c15"
        >
          <span
            className="c18"
          >
            Cell 1-3
          </span>
        </div>
      </div>
    </div>
    <div
      className="c9 c16"
      role="row"
    >
      <div
        className="c12 c17"
        role="cell"
      >
        <div
          className="c14 c15"
        >
          <span
            className="c18"
          >
            Cell 2-1
          </span>
        </div>
      </div>
      <div
        className="c12 c17"
        role="cell"
      >
        <div
          className="c14 c15"
        >
          <span
            className="c18"
          >
            Cell 2-2
          </span>
        </div>
      </div>
      <div
        className="c12 c17"
        role="cell"
      >
        <div
          className="c14 c15"
        >
          <span
            className="c18"
          >
            Cell 2-3
          </span>
        </div>
      </div>
    </div>
    <div
      className="c9 c16"
      role="row"
    >
      <div
        className="c12 c17"
        role="cell"
      >
        <div
          className="c14 c15"
        >
          <span
            className="c18"
          >
            Cell 3-1
          </span>
        </div>
      </div>
      <div
        className="c12 c17"
        role="cell"
      >
        <div
          className="c14 c15"
        >
          <span
            className="c18"
          >
            Cell 3-2
          </span>
        </div>
      </div>
      <div
        className="c12 c17"
        role="cell"
      >
        <div
          className="c14 c15"
        >
          <span
            className="c18"
          >
            Cell 3-3
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | FlexTable / Default FlexTable Default Table With Footer 1`] = `
.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c3 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c3 > *:not(:first-child) {
  padding-top: 0;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c10 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c13 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c16 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c8 {
  display: inline-block;
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c9 {
  width: inherit;
}

.c12 {
  overflow: hidden;
}

.c4 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c4 > *:first-child {
  padding-left: 0;
}

.c4 > *:last-child {
  padding-right: 0;
}

.c11 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c11:hover {
  background: #F5F5F5;
}

.c11 > *:first-child {
  padding-left: 0;
}

.c11 > *:last-child {
  padding-right: 0;
}

.c5 {
  z-index: 1;
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
  border-bottom: 1px solid #282823;
}

.c14 {
  border-top: 1px solid #282823;
  border-bottom: 0;
}

.c7 {
  overflow: hidden;
}

.c15 {
  overflow: hidden;
}

.c2 {
  position: relative;
}

.c0 {
  background-color: #F5F5F5;
}

.c0:not(:last-of-type) {
  margin-bottom: 40px;
}

@media (min-width:760px) {
  .c1 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0"
>
  <span
    className="c1"
  >
    Default Table With Footer
  </span>
  <div
    className="c2"
    role="table"
  >
    <div
      className="c3 c4 c5"
      role="row"
    >
      <div
        className="c6 c7"
        role="columnheader"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c10"
          >
            Header 1
          </span>
        </div>
      </div>
      <div
        className="c6 c7"
        role="columnheader"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c10"
          >
            Header 2
          </span>
        </div>
      </div>
      <div
        className="c6 c7"
        role="columnheader"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c10"
          >
            Header 3
          </span>
        </div>
      </div>
    </div>
    <div
      className="c3 c11"
      role="row"
    >
      <div
        className="c6 c12"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c13"
          >
            Cell 1-1
          </span>
        </div>
      </div>
      <div
        className="c6 c12"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c13"
          >
            Cell 1-2
          </span>
        </div>
      </div>
      <div
        className="c6 c12"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c13"
          >
            Cell 1-3
          </span>
        </div>
      </div>
    </div>
    <div
      className="c3 c11"
      role="row"
    >
      <div
        className="c6 c12"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c13"
          >
            Cell 2-1
          </span>
        </div>
      </div>
      <div
        className="c6 c12"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c13"
          >
            Cell 2-2
          </span>
        </div>
      </div>
      <div
        className="c6 c12"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c13"
          >
            Cell 2-3
          </span>
        </div>
      </div>
    </div>
    <div
      className="c3 c11"
      role="row"
    >
      <div
        className="c6 c12"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c13"
          >
            Cell 3-1
          </span>
        </div>
      </div>
      <div
        className="c6 c12"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c13"
          >
            Cell 3-2
          </span>
        </div>
      </div>
      <div
        className="c6 c12"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c13"
          >
            Cell 3-3
          </span>
        </div>
      </div>
    </div>
    <div
      className="c3 c4 c14"
      role="row"
    >
      <div
        className="c6 c15"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c16"
          >
            Footer 1
          </span>
        </div>
      </div>
      <div
        className="c6 c15"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c16"
          >
            Footer 2
          </span>
        </div>
      </div>
      <div
        className="c6 c15"
        role="cell"
      >
        <div
          className="c8 c9"
        >
          <span
            className="c16"
          >
            Footer 3
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | FlexTable / Default FlexTable Default Table With Title 1`] = `
.c2 {
  margin-bottom: 40px;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c6 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c6 > *:not(:first-child) {
  padding-top: 0;
}

.c9 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c13 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c16 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c11 {
  display: inline-block;
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c12 {
  width: inherit;
}

.c15 {
  overflow: hidden;
}

.c7 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c7 > *:first-child {
  padding-left: 0;
}

.c7 > *:last-child {
  padding-right: 0;
}

.c14 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c14:hover {
  background: #F5F5F5;
}

.c14 > *:first-child {
  padding-left: 0;
}

.c14 > *:last-child {
  padding-right: 0;
}

.c8 {
  z-index: 1;
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
  border-bottom: 1px solid #282823;
}

.c10 {
  overflow: hidden;
}

.c3 {
  position: relative;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  padding-left: 4px;
}

.c0 {
  background-color: #F5F5F5;
}

.c0:not(:last-of-type) {
  margin-bottom: 40px;
}

@media (min-width:760px) {
  .c1 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0"
>
  <span
    className="c1"
  >
    Default Table With Title
  </span>
  <div
    className="c2"
  >
    <div
      aria-labelledby="table-with-title-title"
      className="c3"
      id="table-with-title"
      role="table"
    >
      <div
        className="c4"
        id="table-with-title-title"
      >
        <span
          className="c1 c5"
        >
          Table with title
        </span>
      </div>
      <div
        className="c6 c7 c8"
        role="row"
      >
        <div
          className="c9 c10"
          role="columnheader"
        >
          <div
            className="c11 c12"
          >
            <span
              className="c13"
            >
              Header 1
            </span>
          </div>
        </div>
        <div
          className="c9 c10"
          role="columnheader"
        >
          <div
            className="c11 c12"
          >
            <span
              className="c13"
            >
              Header 2
            </span>
          </div>
        </div>
        <div
          className="c9 c10"
          role="columnheader"
        >
          <div
            className="c11 c12"
          >
            <span
              className="c13"
            >
              Header 3
            </span>
          </div>
        </div>
      </div>
      <div
        className="c6 c14"
        role="row"
      >
        <div
          className="c9 c15"
          role="cell"
        >
          <div
            className="c11 c12"
          >
            <span
              className="c16"
            >
              Cell 1-1
            </span>
          </div>
        </div>
        <div
          className="c9 c15"
          role="cell"
        >
          <div
            className="c11 c12"
          >
            <span
              className="c16"
            >
              Cell 1-2
            </span>
          </div>
        </div>
        <div
          className="c9 c15"
          role="cell"
        >
          <div
            className="c11 c12"
          >
            <span
              className="c16"
            >
              Cell 1-3
            </span>
          </div>
        </div>
      </div>
      <div
        className="c6 c14"
        role="row"
      >
        <div
          className="c9 c15"
          role="cell"
        >
          <div
            className="c11 c12"
          >
            <span
              className="c16"
            >
              Cell 2-1
            </span>
          </div>
        </div>
        <div
          className="c9 c15"
          role="cell"
        >
          <div
            className="c11 c12"
          >
            <span
              className="c16"
            >
              Cell 2-2
            </span>
          </div>
        </div>
        <div
          className="c9 c15"
          role="cell"
        >
          <div
            className="c11 c12"
          >
            <span
              className="c16"
            >
              Cell 2-3
            </span>
          </div>
        </div>
      </div>
      <div
        className="c6 c14"
        role="row"
      >
        <div
          className="c9 c15"
          role="cell"
        >
          <div
            className="c11 c12"
          >
            <span
              className="c16"
            >
              Cell 3-1
            </span>
          </div>
        </div>
        <div
          className="c9 c15"
          role="cell"
        >
          <div
            className="c11 c12"
          >
            <span
              className="c16"
            >
              Cell 3-2
            </span>
          </div>
        </div>
        <div
          className="c9 c15"
          role="cell"
        >
          <div
            className="c11 c12"
          >
            <span
              className="c16"
            >
              Cell 3-3
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-labelledby="some-other-table-title"
    className="c3"
    id="some-other-table"
    role="table"
  >
    <div
      className="c4"
      id="some-other-table-title"
    >
      <span
        className="c1 c5"
      >
        Some other table
      </span>
    </div>
    <div
      className="c6 c7 c8"
      role="row"
    >
      <div
        className="c9 c10"
        role="columnheader"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c13"
          >
            Header 1
          </span>
        </div>
      </div>
      <div
        className="c9 c10"
        role="columnheader"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c13"
          >
            Header 2
          </span>
        </div>
      </div>
      <div
        className="c9 c10"
        role="columnheader"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c13"
          >
            Header 3
          </span>
        </div>
      </div>
    </div>
    <div
      className="c6 c14"
      role="row"
    >
      <div
        className="c9 c15"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c16"
          >
            Cell 1-1
          </span>
        </div>
      </div>
      <div
        className="c9 c15"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c16"
          >
            Cell 1-2
          </span>
        </div>
      </div>
      <div
        className="c9 c15"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c16"
          >
            Cell 1-3
          </span>
        </div>
      </div>
    </div>
    <div
      className="c6 c14"
      role="row"
    >
      <div
        className="c9 c15"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c16"
          >
            Cell 2-1
          </span>
        </div>
      </div>
      <div
        className="c9 c15"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c16"
          >
            Cell 2-2
          </span>
        </div>
      </div>
      <div
        className="c9 c15"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c16"
          >
            Cell 2-3
          </span>
        </div>
      </div>
    </div>
    <div
      className="c6 c14"
      role="row"
    >
      <div
        className="c9 c15"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c16"
          >
            Cell 3-1
          </span>
        </div>
      </div>
      <div
        className="c9 c15"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c16"
          >
            Cell 3-2
          </span>
        </div>
      </div>
      <div
        className="c9 c15"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c16"
          >
            Cell 3-3
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
